Remove price from commodity and attached it to the order

--- a/src/scss/pages/DashboardPage.scss
+++ b/src/scss/pages/DashboardPage.scss
@@ -205,8 +205,8 @@
               .addInfoHeader {
                 width: 300px;
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
+                flex-direction: row;
+                justify-content: space-evenly;
                 font-size: abstracts.$PrimaryFontSize;
                 text-align: center;
 
