--- a/src/scss/pages/DriversPage.scss
+++ b/src/scss/pages/DriversPage.scss
@@ -33,6 +33,10 @@
         width: 160px;
         padding-left: 12px;
         font-size: 18px;
+
+        p{
+          color: abstracts.$white;
+        }
       }
 
       .row {
@@ -49,6 +53,7 @@
           width: 30%;
           margin-bottom: 10px;
           font-size: 14px;
+          color: abstracts.$white;
           input {
             height: 30px;
             border-radius: 6px;
@@ -105,6 +110,9 @@
         width: 245px;
         padding-left: 12px;
         font-size: 18px;
+        p{
+          color: abstracts.$white;
+        }
       }
 
       .drivers {
@@ -126,11 +134,13 @@
 
           .driverName {
             font-size: 16px;
+            color: abstracts.$white;
           }
 
           .driverEmail,
           .driverPhone {
             font-size: 12px;
+            color: abstracts.$white;
           }
 
           button {
