--- a/src/scss/pages/RestartPasswordPage.scss
+++ b/src/scss/pages/RestartPasswordPage.scss
@@ -30,6 +30,7 @@
       border: 1px solid abstracts.$dark-secondary;
       outline: none;
       color: abstracts.$white;
+      background-color: abstracts.$dark-secondary;
     }
 
     button {
