--- a/src/scss/pages/DeliveryPage.scss
+++ b/src/scss/pages/DeliveryPage.scss
@@ -92,6 +92,7 @@
           margin-left: 30px;
           padding: 3px 12px;
           color: abstracts.$white;
+          background: abstracts.$gray;
         }
       }
     }
