--- a/src/scss/pages/SettingsPage.scss
+++ b/src/scss/pages/SettingsPage.scss
@@ -31,6 +31,7 @@
         flex-direction: column;
         margin-bottom: 10px;
         font-size: 14px;
+        color: abstracts.$white;
 
         input {
           margin-top: 5px;
