--- a/src/scss/pages/LoginRegisterPage.scss
+++ b/src/scss/pages/LoginRegisterPage.scss
@@ -87,12 +87,14 @@
       align-items: center;
       color: white;
 
-      a{
+      a {
         color: aqua;
       }
+
       input {
         width: 5%;
       }
+
       p {
         width: 90%;
         font-size: 0.7rem;
@@ -121,6 +123,31 @@
       text-align: center;
       font-size: 0.8rem;
       font-weight: 600;
+    }
+
+    .demo {
+      // background-color: red;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .info {
+        margin-bottom: 8px;
+      }
+
+      .text {
+        font-size: 14px;
+
+        &:nth-of-type(3) {
+          margin-bottom: 8px;
+        }
+      }
+
+      .textred {
+        color: red;
+        font-size: 14px;
+      }
     }
   }
 }
