--- a/src/scss/pages/DashboardPage.scss
+++ b/src/scss/pages/DashboardPage.scss
@@ -58,12 +58,12 @@
 
           .th {
             font-size: abstracts.$SecondaryFontSize;
-            color: abstracts.$white;
+            color: abstracts.$text-primary;
             text-align: center;
           }
 
           .td {
-            color: abstracts.$white;
+            color: abstracts.$text-primary;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -88,7 +88,7 @@
         }
 
         .tbody {
-          height: calc(100vh - 230px);
+          height: calc(100vh - 240px);
           overflow-y: auto;
           .tr {
             display: flex;
@@ -192,7 +192,7 @@
             transition: 0.4s linear;
 
             p {
-              color: abstracts.$white !important;
+              color: abstracts.$text-primary !important;
             }
 
             .tr {
@@ -297,15 +297,15 @@
     }
 
     footer {
-      margin-top: 5px;
+      margin-top: 0px;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-end;
       justify-content: center;
       p {
         font-size: abstracts.$PrimaryFontSize;
         text-align: center;
-        color: abstracts.$white;
+        color: abstracts.$text-primary;
         a {
           color: abstracts.$Blue;
           text-decoration: none;
